k8s/apps/envoy-gateway/overlays/235-prod/resources/dummy-http.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-200-route
  labels:
    k8s.tdude.co/oidc-security: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: "envoy.k8s.235.tdude.co"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway # Reference your Gateway resource
    namespace: envoy-gateway  # Replace with the namespace of your Gateway
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: dummy-listeners
  hostnames:
  - dummy.235.tdude.co
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: http-200-svc
      namespace: envoy-gateway
      port: 80 # Match the "https" port specified in your service
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: oidc-attachment
spec:
  from:
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: envoy-gateway
  to:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-200-route
