k8s/apps/envoy-gateway/overlays/235-prod/resources/oidc-security.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-security
spec:
  targetSelectors:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespaces:
      from: Selector
      selector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: Exists
    matchLabels:
      k8s.tdude.co/oidc-security: "true"
  oidc:
    provider:
      issuer: "https://id.235.tdude.co"
    clientID: "a9803139-afb5-4e0b-a6e7-63b8d5934b71"
    clientSecret:
      name: "pocket-id-client-secret"
    redirectURL: "https://dummy.235.tdude.co/oauth2/callback"
